qt/gen_qsignalmapper.nim

import Qt5Widgets_libs

{.push raises: [].}

from system/ansi_c import c_free

type
  struct_miqt_string {.used.} = object
    len: csize_t
    data: cstring

  struct_miqt_array {.used.} = object
    len: csize_t
    data: pointer

  struct_miqt_map {.used.} = object
    len: csize_t
    keys: pointer
    values: pointer

  miqt_uintptr_t {.importc: "uintptr_t", header: "stdint.h", used.} = uint
  miqt_intptr_t {.importc: "intptr_t", header: "stdint.h", used.} = int

func fromBytes(T: type string, v: openArray[byte]): string {.used.} =
  if v.len > 0:
    result = newString(v.len)
    when nimvm:
      for i, c in v:
        result[i] = cast[char](c)
    else:
      copyMem(addr result[0], unsafeAddr v[0], v.len)

const cflags = gorge("pkg-config -cflags Qt5Widgets")
{.compile("gen_qsignalmapper.cpp", cflags).}


import gen_qsignalmapper_types
export gen_qsignalmapper_types

import
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qwidget
export
  gen_qcoreevent,
  gen_qmetaobject,
  gen_qobject,
  gen_qobjectdefs,
  gen_qwidget

type cQSignalMapper*{.exportc: "QSignalMapper", incompleteStruct.} = object

proc fcQSignalMapper_new(): ptr cQSignalMapper {.importc: "QSignalMapper_new".}
proc fcQSignalMapper_new2(parent: pointer): ptr cQSignalMapper {.importc: "QSignalMapper_new2".}
proc fcQSignalMapper_metaObject(self: pointer, ): pointer {.importc: "QSignalMapper_metaObject".}
proc fcQSignalMapper_metacast(self: pointer, param1: cstring): pointer {.importc: "QSignalMapper_metacast".}
proc fcQSignalMapper_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSignalMapper_metacall".}
proc fcQSignalMapper_tr(s: cstring): struct_miqt_string {.importc: "QSignalMapper_tr".}
proc fcQSignalMapper_trUtf8(s: cstring): struct_miqt_string {.importc: "QSignalMapper_trUtf8".}
proc fcQSignalMapper_setMapping(self: pointer, sender: pointer, id: cint): void {.importc: "QSignalMapper_setMapping".}
proc fcQSignalMapper_setMapping2(self: pointer, sender: pointer, text: struct_miqt_string): void {.importc: "QSignalMapper_setMapping2".}
proc fcQSignalMapper_setMapping3(self: pointer, sender: pointer, widget: pointer): void {.importc: "QSignalMapper_setMapping3".}
proc fcQSignalMapper_setMapping4(self: pointer, sender: pointer, objectVal: pointer): void {.importc: "QSignalMapper_setMapping4".}
proc fcQSignalMapper_removeMappings(self: pointer, sender: pointer): void {.importc: "QSignalMapper_removeMappings".}
proc fcQSignalMapper_mapping(self: pointer, id: cint): pointer {.importc: "QSignalMapper_mapping".}
proc fcQSignalMapper_mappingWithText(self: pointer, text: struct_miqt_string): pointer {.importc: "QSignalMapper_mappingWithText".}
proc fcQSignalMapper_mappingWithWidget(self: pointer, widget: pointer): pointer {.importc: "QSignalMapper_mappingWithWidget".}
proc fcQSignalMapper_mappingWithObject(self: pointer, objectVal: pointer): pointer {.importc: "QSignalMapper_mappingWithObject".}
proc fcQSignalMapper_mapped(self: pointer, param1: cint): void {.importc: "QSignalMapper_mapped".}
proc fQSignalMapper_connect_mapped(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mapped".}
proc fcQSignalMapper_mappedWithQString(self: pointer, param1: struct_miqt_string): void {.importc: "QSignalMapper_mappedWithQString".}
proc fQSignalMapper_connect_mappedWithQString(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedWithQString".}
proc fcQSignalMapper_mappedWithQWidget(self: pointer, param1: pointer): void {.importc: "QSignalMapper_mappedWithQWidget".}
proc fQSignalMapper_connect_mappedWithQWidget(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedWithQWidget".}
proc fcQSignalMapper_mappedWithQObject(self: pointer, param1: pointer): void {.importc: "QSignalMapper_mappedWithQObject".}
proc fQSignalMapper_connect_mappedWithQObject(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedWithQObject".}
proc fcQSignalMapper_mappedInt(self: pointer, param1: cint): void {.importc: "QSignalMapper_mappedInt".}
proc fQSignalMapper_connect_mappedInt(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedInt".}
proc fcQSignalMapper_mappedString(self: pointer, param1: struct_miqt_string): void {.importc: "QSignalMapper_mappedString".}
proc fQSignalMapper_connect_mappedString(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedString".}
proc fcQSignalMapper_mappedWidget(self: pointer, param1: pointer): void {.importc: "QSignalMapper_mappedWidget".}
proc fQSignalMapper_connect_mappedWidget(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedWidget".}
proc fcQSignalMapper_mappedObject(self: pointer, param1: pointer): void {.importc: "QSignalMapper_mappedObject".}
proc fQSignalMapper_connect_mappedObject(self: pointer, slot: int) {.importc: "QSignalMapper_connect_mappedObject".}
proc fcQSignalMapper_map(self: pointer, ): void {.importc: "QSignalMapper_map".}
proc fcQSignalMapper_mapWithSender(self: pointer, sender: pointer): void {.importc: "QSignalMapper_mapWithSender".}
proc fcQSignalMapper_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSignalMapper_tr2".}
proc fcQSignalMapper_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSignalMapper_tr3".}
proc fcQSignalMapper_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSignalMapper_trUtf82".}
proc fcQSignalMapper_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSignalMapper_trUtf83".}
proc fQSignalMapper_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QSignalMapper_virtualbase_metaObject".}
proc fcQSignalMapper_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_metaObject".}
proc fQSignalMapper_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QSignalMapper_virtualbase_metacast".}
proc fcQSignalMapper_override_virtual_metacast(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_metacast".}
proc fQSignalMapper_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSignalMapper_virtualbase_metacall".}
proc fcQSignalMapper_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_metacall".}
proc fQSignalMapper_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSignalMapper_virtualbase_event".}
proc fcQSignalMapper_override_virtual_event(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_event".}
proc fQSignalMapper_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSignalMapper_virtualbase_eventFilter".}
proc fcQSignalMapper_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_eventFilter".}
proc fQSignalMapper_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSignalMapper_virtualbase_timerEvent".}
proc fcQSignalMapper_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_timerEvent".}
proc fQSignalMapper_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSignalMapper_virtualbase_childEvent".}
proc fcQSignalMapper_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_childEvent".}
proc fQSignalMapper_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSignalMapper_virtualbase_customEvent".}
proc fcQSignalMapper_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_customEvent".}
proc fQSignalMapper_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSignalMapper_virtualbase_connectNotify".}
proc fcQSignalMapper_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_connectNotify".}
proc fQSignalMapper_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSignalMapper_virtualbase_disconnectNotify".}
proc fcQSignalMapper_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSignalMapper_override_virtual_disconnectNotify".}
proc fcQSignalMapper_staticMetaObject(): pointer {.importc: "QSignalMapper_staticMetaObject".}
proc fcQSignalMapper_delete(self: pointer) {.importc: "QSignalMapper_delete".}


func init*(T: type QSignalMapper, h: ptr cQSignalMapper): QSignalMapper =
  T(h: h)
proc create*(T: type QSignalMapper, ): QSignalMapper =

  QSignalMapper.init(fcQSignalMapper_new())
proc create*(T: type QSignalMapper, parent: gen_qobject.QObject): QSignalMapper =

  QSignalMapper.init(fcQSignalMapper_new2(parent.h))
proc metaObject*(self: QSignalMapper, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQSignalMapper_metaObject(self.h))

proc metacast*(self: QSignalMapper, param1: cstring): pointer =

  fcQSignalMapper_metacast(self.h, param1)

proc metacall*(self: QSignalMapper, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQSignalMapper_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QSignalMapper, s: cstring): string =

  let v_ms = fcQSignalMapper_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QSignalMapper, s: cstring): string =

  let v_ms = fcQSignalMapper_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setMapping*(self: QSignalMapper, sender: gen_qobject.QObject, id: cint): void =

  fcQSignalMapper_setMapping(self.h, sender.h, id)

proc setMapping2*(self: QSignalMapper, sender: gen_qobject.QObject, text: string): void =

  fcQSignalMapper_setMapping2(self.h, sender.h, struct_miqt_string(data: text, len: csize_t(len(text))))

proc setMapping3*(self: QSignalMapper, sender: gen_qobject.QObject, widget: gen_qwidget.QWidget): void =

  fcQSignalMapper_setMapping3(self.h, sender.h, widget.h)

proc setMapping4*(self: QSignalMapper, sender: gen_qobject.QObject, objectVal: gen_qobject.QObject): void =

  fcQSignalMapper_setMapping4(self.h, sender.h, objectVal.h)

proc removeMappings*(self: QSignalMapper, sender: gen_qobject.QObject): void =

  fcQSignalMapper_removeMappings(self.h, sender.h)

proc mapping*(self: QSignalMapper, id: cint): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQSignalMapper_mapping(self.h, id))

proc mappingWithText*(self: QSignalMapper, text: string): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQSignalMapper_mappingWithText(self.h, struct_miqt_string(data: text, len: csize_t(len(text)))))

proc mappingWithWidget*(self: QSignalMapper, widget: gen_qwidget.QWidget): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQSignalMapper_mappingWithWidget(self.h, widget.h))

proc mappingWithObject*(self: QSignalMapper, objectVal: gen_qobject.QObject): gen_qobject.QObject =

  gen_qobject.QObject(h: fcQSignalMapper_mappingWithObject(self.h, objectVal.h))

proc mapped*(self: QSignalMapper, param1: cint): void =

  fcQSignalMapper_mapped(self.h, param1)

proc miqt_exec_callback_QSignalMapper_mapped(slot: int, param1: cint) {.exportc.} =
  type Cb = proc(param1: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = param1


  nimfunc[](slotval1)

proc onmapped*(self: QSignalMapper, slot: proc(param1: cint)) =
  type Cb = proc(param1: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQSignalMapper_connect_mapped(self.h, cast[int](addr tmp[]))
proc mappedWithQString*(self: QSignalMapper, param1: string): void =

  fcQSignalMapper_mappedWithQString(self.h, struct_miqt_string(data: param1, len: csize_t(len(param1))))
